# ENGG1340-Project-25Spring

./: .gitignore  CMakeLists.txt  README.md  README.txt
.github/ISSUE_TEMPLATE/: feature-function-tracker.md
.github/workflows/: compile.yml
include/core/: arena.hpp  arena_reader.hpp  entity.hpp  entity_type.hpp  event_handler.hpp  eventhandler.cpp  eventhandler.hpp  game.hpp  game_options.hpp  leaderboard.hpp  point.hpp
include/ui/: common.hpp  game_ui_renderer.hpp  render_option.hpp  renderable.hpp
include/util/: log.hpp
res/default_maps/: easy.shoot  hard.shoot  medium.shoot
res/sample_maps/: hku.shoot
src/: game_level_ui.cpp  game_level_ui.hpp  game_score_ui.cpp  game_score_ui.hpp  leaderboard_ui.cpp  leaderboard_ui.hpp  main.cpp
src/core/: README.md  arena.cpp  arena_reader.cpp  core.cpp.BAK  entity.cpp  entity.hpp  event_handler.cpp  eventhandler.cpp  game.cpp  game_options.cpp  leaderboard.cpp
src/ui/: common.cpp  game_ui_renderer.cpp  render_option.cpp
src/util/: log.cpp
